RESOLVED FIXED84749
[Coverity] Uninitialized fields in RenderSVGShape constructors
https://bugs.webkit.org/show_bug.cgi?id=84749
Summary [Coverity] Uninitialized fields in RenderSVGShape constructors
Florin Malita
Reported 2012-04-24 12:22:50 PDT
RenderSVGShape::RenderSVGShape(SVGStyledTransformableElement* node): * m_strokeContainsFallBack RenderSVGShape::RenderSVGShape(SVGStyledTransformableElement* node, Path* path, bool isFillFallback): * m_needsTransformUpdate * m_needsShapeUpdate * m_strokeContainsFallBack * m_needsBoundariesUpdate Looks like neither m_strokeContainsFallBack nor the second constructor is being used, so we can simply get rid of them.
Attachments
Patch (2.04 KB, patch)
2012-04-24 12:40 PDT, Florin Malita
no flags
Florin Malita
Comment 1 2012-04-24 12:40:26 PDT
Darin Adler
Comment 2 2012-04-24 12:42:05 PDT
Comment on attachment 138622 [details] Patch Looks fine. Great to remove unused code!
WebKit Review Bot
Comment 3 2012-04-25 06:44:32 PDT
Comment on attachment 138622 [details] Patch Clearing flags on attachment: 138622 Committed r115196: <http://trac.webkit.org/changeset/115196>
WebKit Review Bot
Comment 4 2012-04-25 06:44:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.