[Coverity] Uninitialized fields in RenderSVGShape constructors https://bugs.webkit.org/show_bug.cgi?id=84749

Reviewed by Darin Adler.

Removing unused RenderSVGShape constructor and field.

No new tests - no behavior change.

* rendering/svg/RenderSVGShape.cpp:
* rendering/svg/RenderSVGShape.h:
(RenderSVGShape):


Canonical link: https://commits.webkit.org/102350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115196 268f45cc-cd09-0410-ab3c-d52691b4dbfc